# legal-action

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
apps/api/src/legal_action_api/: main.py
apps/api/src/legal_action_api/domaine/: __init__.py  enums.py
apps/api/src/legal_action_api/routes/: health.py  templates.py
apps/api/src/legal_action_api/templates/: __init__.py  errors.py  loader.py  renderer.py
apps/api/templates/: README.md  resiliation-refusee-free-v1.yaml
apps/api/tests/: conftest.py  test_health.py  test_template_endpoint.py  test_template_loader.py  test_template_renderer.py
apps/api/tests/__snapshots__/: test_template_renderer.ambr
apps/web/: .env.example  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts  vitest.setup.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(legal)/: layout.tsx
apps/web/src/app/(legal)/cgu/: page.tsx
apps/web/src/app/(legal)/cgv/: page.tsx
apps/web/src/app/(legal)/confidentialite/: page.tsx
apps/web/src/app/(legal)/mentions-legales/: page.tsx
apps/web/src/app/health-demo/: health-status.test.tsx  health-status.tsx  page.tsx
apps/web/src/components/: ai-disclaimer.tsx  cookie-banner.tsx  draft-notice.tsx  footer.tsx
apps/web/src/components/__tests__/: cgu.test.tsx  cgv.test.tsx  confidentialite.test.tsx  cookie-banner.test.tsx  footer.test.tsx  mentions-legales.test.tsx
apps/web/src/lib/: api-config.ts  health.ts
apps/workers/: .env.example  Dockerfile  fly.toml  pyproject.toml
apps/workers/src/legal_action_workers/: client.py  config.py  main.py
design/: identity.md  proposals.md
docs/adr/: 0001-stack-technique.md  0002-monorepo.md  0003-templates-juridiques.md  0004-autonomie-graduee.md  0005-architecture-mail.md  0006-pricing-model.md  0007-vocabulaire-domaine.md
docs/specs/: saisine-mediateur-comm-elec.md
